[gd_scene load_steps=17 format=3 uid="uid://o1ni24lljj0e"]

[ext_resource type="Texture2D" uid="uid://d256rcjvfgi4r" path="res://assets/bloc_sheet.png" id="1_r5f6k"]
[ext_resource type="Texture2D" uid="uid://kiytkiynfh5r" path="res://assets/background-space.png" id="1_xvt35"]
[ext_resource type="Script" path="res://scripts/TetremzzzGame.gd" id="2_dkd4q"]
[ext_resource type="LabelSettings" uid="uid://4who20qup4y3" path="res://assets/ui_label_settings.tres" id="3_ogoxq"]
[ext_resource type="FontFile" uid="uid://lyxkbj4otydv" path="res://assets/space age.otf" id="3_owhsr"]
[ext_resource type="Script" path="res://scenes/Hold.gd" id="5_awiuk"]
[ext_resource type="Script" path="res://scenes/Next.gd" id="6_7m1kj"]

[sub_resource type="LabelSettings" id="LabelSettings_pdu7h"]
font = ExtResource("3_owhsr")
font_size = 96

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u4ak1"]
texture = ExtResource("1_r5f6k")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_5yhxe"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_u4ak1")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oitwi"]
texture = ExtResource("1_r5f6k")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_onfvq"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_oitwi")

[sub_resource type="LabelSettings" id="LabelSettings_hic7d"]
line_spacing = 8.0
font = ExtResource("3_owhsr")
font_size = 28

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v5o43"]
texture = ExtResource("1_r5f6k")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_wgabh"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_v5o43")

[sub_resource type="LabelSettings" id="LabelSettings_sv4c6"]
font = ExtResource("3_owhsr")
font_size = 128
shadow_size = 50
shadow_color = Color(0, 0, 0, 0.745098)
shadow_offset = Vector2(0, 30)

[node name="Main" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
offset_left = -1272.0
offset_top = -552.0
offset_right = 1808.0
offset_bottom = 1768.0
texture = ExtResource("1_xvt35")

[node name="BackgroundDim" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003
anchor_right = 0.992
anchor_bottom = 0.99
offset_left = 16.24
offset_top = -8.0
offset_right = 47.6399
offset_bottom = 7.19995
color = Color(0, 0, 0, 0.32549)

[node name="HoldDim" type="ColorRect" parent="."]
offset_left = -616.0
offset_top = 24.0
offset_right = -152.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.666667)

[node name="ScoreBoardDim" type="ColorRect" parent="."]
offset_left = -608.0
offset_top = 488.0
offset_right = -160.0
offset_bottom = 1304.0
color = Color(0, 0, 0, 0.666667)

[node name="NextDim" type="ColorRect" parent="."]
offset_left = 800.0
offset_top = 32.0
offset_right = 1248.0
offset_bottom = 734.0
color = Color(0, 0, 0, 0.666667)

[node name="BoardDim" type="ColorRect" parent="."]
offset_left = -48.0
offset_top = -144.0
offset_right = 688.0
offset_bottom = 1320.0
color = Color(0, 0, 0, 0.666667)

[node name="Tetremz" type="Label" parent="."]
offset_left = -80.0
offset_top = -144.0
offset_right = 717.0
offset_bottom = -21.0
text = "TETREMZ"
label_settings = SubResource("LabelSettings_pdu7h")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(624, 672)
points = PackedVector2Array(32, -672, -648, -672)
width = 2.0
default_color = Color(1, 0.121569, 0.180392, 0.615686)

[node name="Board" type="TileMap" parent="."]
position = Vector2(1, 0)
tile_set = SubResource("TileSet_5yhxe")
rendering_quadrant_size = 64
format = 2
layer_0/name = "Board"
layer_0/tile_data = PackedInt32Array(1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 983050, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, -1, 0, 0, -131073, 0, 0, -65537, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0)
layer_1/name = "FallingPiece"
layer_1/z_index = 10
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Shadow"
layer_2/z_index = 5
layer_2/tile_data = PackedInt32Array()
script = ExtResource("2_dkd4q")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 568)
zoom = Vector2(0.5, 0.5)

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.075
autostart = true

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ScoreBoardBorder" type="TileMap" parent="."]
position = Vector2(-640, 448)
tile_set = SubResource("TileSet_onfvq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 1, 0, 0, 851969, 0, 0, 2, 0, 0, 851970, 0, 0, 3, 0, 0, 851971, 0, 0, 4, 0, 0, 851972, 0, 0, 5, 0, 0, 851973, 0, 0, 6, 0, 0, 851974, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0)

[node name="ScoreBoard" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.996
offset_left = -576.0
offset_top = 512.0
offset_right = -192.0
offset_bottom = 1280.0

[node name="ScoreContainer" type="MarginContainer" parent="ScoreBoard"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScoreBox" type="VBoxContainer" parent="ScoreBoard/ScoreContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreBoard/ScoreContainer/ScoreBox"]
layout_mode = 2
text = "Score :
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="ScoreBoard/ScoreContainer/ScoreBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="LinesContainer" type="MarginContainer" parent="ScoreBoard"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LinesBox" type="VBoxContainer" parent="ScoreBoard/LinesContainer"]
layout_mode = 2

[node name="LinesLabel" type="Label" parent="ScoreBoard/LinesContainer/LinesBox"]
layout_mode = 2
text = "Lines :
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="LinesValue" type="Label" parent="ScoreBoard/LinesContainer/LinesBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="LevelContainer" type="MarginContainer" parent="ScoreBoard"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="LevelBox" type="VBoxContainer" parent="ScoreBoard/LevelContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="ScoreBoard/LevelContainer/LevelBox"]
layout_mode = 2
text = "Level :
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="LevelValue" type="Label" parent="ScoreBoard/LevelContainer/LevelBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1
"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="ControlsContainer" type="MarginContainer" parent="."]
offset_left = -576.0
offset_top = 1008.0
offset_right = -182.0
offset_bottom = 1284.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ControlsBox" type="VBoxContainer" parent="ControlsContainer"]
layout_mode = 2

[node name="Controls" type="Label" parent="ControlsContainer/ControlsBox"]
layout_mode = 2
text = "up : Rotate right
X : rotate left
C : hold
<- -> : move
down : go down
Space : drop
P : pause"
label_settings = SubResource("LabelSettings_hic7d")

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.829
anchor_top = 0.007
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 768.0
offset_top = 832.0
offset_right = 1280.0
offset_bottom = 1344.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="RestartContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="RestartButton" type="Button" parent="Buttons/RestartContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_owhsr")
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="PauseContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="PauseButton" type="Button" parent="Buttons/PauseContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_owhsr")
theme_override_font_sizes/font_size = 64
toggle_mode = true
text = "Pause"

[node name="ExitContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="ExitButton" type="Button" parent="Buttons/ExitContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_owhsr")
theme_override_font_sizes/font_size = 64
text = "EXIT
"

[node name="Hold" type="TileMap" parent="."]
unique_name_in_owner = true
position = Vector2(-512, 128)
tile_set = SubResource("TileSet_wgabh")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0)
layer_1/name = "Shadow"
layer_1/enabled = false
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
script = ExtResource("5_awiuk")

[node name="HoldLabel" type="Label" parent="Hold"]
offset_left = -40.0
offset_top = -192.0
offset_right = 294.0
offset_bottom = -130.0
text = "HOLD"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Next" type="TileMap" parent="."]
unique_name_in_owner = true
position = Vector2(896, 128)
tile_set = SubResource("TileSet_wgabh")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 0, 0, 0, 65536, 0, 0, 1, 0, 0, 65537, 0, 0, 2, 0, 0, 65538, 0, 0, 3, 0, 0, 65539, 0, 0, 196608, 0, 0, 262144, 0, 0, 196609, 0, 0, 262145, 0, 0, 196610, 0, 0, 262146, 0, 0, 196611, 0, 0, 262147, 0, 0, 393216, 0, 0, 458752, 0, 0, 393217, 0, 0, 458753, 0, 0, 393218, 0, 0, 458754, 0, 0, 393219, 0, 0, 458755, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0)
layer_1/name = "Shadow"
layer_1/enabled = false
layer_1/z_index = -5
layer_1/tile_data = PackedInt32Array()
script = ExtResource("6_7m1kj")

[node name="NextLabel" type="Label" parent="Next"]
offset_left = -40.0
offset_top = -192.0
offset_right = 294.0
offset_bottom = -130.0
text = "NEXT"
label_settings = ExtResource("3_ogoxq")
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="."]
offset_left = -104.0
offset_top = 520.0
offset_right = 855.0
offset_bottom = 643.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_sv4c6")

[node name="Paused" type="Label" parent="."]
visible = false
offset_left = 1.0
offset_top = 576.0
offset_right = 960.0
offset_bottom = 699.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_sv4c6")

[connection signal="timeout" from="MoveTimer" to="Board" method="_on_move_timer_timeout"]
[connection signal="timeout" from="FallTimer" to="Board" method="_on_fall_timer_timeout"]
[connection signal="pressed" from="Buttons/RestartContainer/RestartButton" to="Board" method="_on_restart_button_pressed"]
[connection signal="toggled" from="Buttons/PauseContainer/PauseButton" to="Board" method="_on_pause_button_toggled"]
[connection signal="pressed" from="Buttons/ExitContainer/ExitButton" to="Board" method="_on_exit_button_pressed"]
